llm-servers/vllm/cpu/standalone/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vllm-deployment
  labels:
    app: vllm-cpu
    app.kubernetes.io/part-of: vllm-cpu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vllm-cpu
  template:
    metadata:
      labels:
        app: vllm-cpu
    spec:
      volumes:
        - name: models-cache
          persistentVolumeClaim:
            claimName: vllm-models-cache
        - name: shm
          emptyDir:
            medium: Memory
            sizeLimit: 1Gi
      containers:
        - name: server
          image: 'quay.io/rh-aiservices-bu/vllm-cpu-openai-ubi9:0.3'
          imagePullPolicy: IfNotPresent
          args: [
            "--model",
            "TinyLlama/TinyLlama-1.1B-Chat-v1.0",
            "--download-dir",
            "/models-cache",
            "--max-model-len", "2048"]
          ports:
            - name: http
              protocol: TCP
              containerPort: 8000
          resources:
            limits:
              cpu: '2'
              memory: 8Gi
            requests:
              cpu: '1'
              memory: 4Gi
          livenessProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 100
            timeoutSeconds: 8
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          # securityContext:
          #   capabilities:
          #     drop:
          #       - ALL
          #   runAsNonRoot: true
          #   allowPrivilegeEscalation: false
          #   seccompProfile:
          #     type: RuntimeDefault
          startupProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 24
          volumeMounts:
            - name: models-cache
              mountPath: /models-cache
            - name: shm
              mountPath: /dev/shm
      restartPolicy: Always
  strategy:
    type: Recreate
