llm-servers/vllm/cpu/standalone/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vllm-service
  labels:
    app: vllm-cpu
spec:
  type: ClusterIP
  selector:
    app: vllm-cpu
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: http
